<resources>
    <string name="app_name">Living Environment Regents Prep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_main__menu">Main_Menu</string>
    <string name="title_activity_nysresources">NYSResources</string>
    <string name="title_activity_manage_account">ManageAccount</string>
    <string name="title_activity_firt_time_welcome">FirtTimeWelcome</string>
    <string name="nys_alert">**In order to access the New York State Living Environment Regents databases, you must have a PDF reader installed &amp; internet access in your mobile device.</string>
    <string name="title_activity_quizzes">Quizzes</string>
    <string name="title_activity_quizz">QuizzActivity</string>
        <string name="qz1_q1">1) Which observation could lead to the conclusion that an object is nonliving? </string>
    <string name="qz1_a1">(1) It passes on hereditary information only through asexual reproduction.</string>
    <string name="qz1_a2">(2) It carries out synthesis.</string>
    <string name="qz1_a3">(3) It cannot perform metabolic processes.</string>
    <string name="qz1_a4">(4) It is composed of a cell, but does not have tissues.</string>
        <string name="qz1_q2">2) Which sequence best represents increasing complexity? </string>
    <string name="qz1_q2_a1">(1) tissues → cells → organelles → organs</string>
    <string name="qz1_q2_a2">(2)  cells → organelles → organs → organism</string>
    <string name="qz1_q2_a3">(3) organelles → cells → tissues → organs</string>
    <string name="qz1_q2_a4">(4) organism → cells → tissues → organelles</string>
        <string name="qz1_q3">3) The cytoplasm in a single-celled organism and the circulatory system in a human both </string>
    <string name="qz1_q3_a1">(1) break down molecules into smaller components</string>
    <string name="qz1_q3_a2">(2) release energy to be used by the organism</string>
    <string name="qz1_q3_a3">(3) transport substances throughout the organism</string>
    <string name="qz1_q3_a4">(4) distribute blood to all of the parts of the organism</string>
        <string name="qz1_q4">4) The reproductive cycle in females is regulated primarily by </string>
    <string name="qz1_q4_a1">(1) estrogen and testosterone</string>
    <string name="qz1_q4_a2">(2) estrogen and progesterone</string>
    <string name="qz1_q4_a3">(3) progesterone and insulin</string>
    <string name="qz1_q4_a4">(4) progesterone and testosterone</string>
        <string name="qz1_q5">5) Photosynthesis and respiration are alike in that they both </string>
    <string name="qz1_q5_a1">(1) require the Sun as a direct source of energy</string>
    <string name="qz1_q5_a2">(2) result in the production of glucose molecules</string>
    <string name="qz1_q5_a3">(3) require specific catalysts</string>
    <string name="qz1_q5_a4">(4) occur within mitochondria</string>
        <string name="qz1_q6">6) Nicotine is only one of the many toxic chemicals inhaled while smoking. What effect can such toxic chemicals have on the body? </string>
    <string name="qz1_q6_a1">(1) They stimulate an increase in height.</string>
    <string name="qz1_q6_a2">(2) They stimulate uncontrolled cell division.</string>
    <string name="qz1_q6_a3">(3) They eliminate carbon dioxide from cells.</string>
    <string name="qz1_q6_a4">(4) They eliminate chromosomes from many cells.</string>
        <string name="qz1_q7">7) Which process uses energy to combine inorganic molecules to synthesize organic molecules? </string>
    <string name="qz1_q7_a1">(1) respiration</string>
    <string name="qz1_q7_a2">(2) digestion</string>
    <string name="qz1_q7_a3">(3) photosynthesis</string>
    <string name="qz1_q7_a4">(4) decomposition</string>
        <string name="qz1_q8">8) The inability of an organism to produce certain proteins can occur when an organism is lacking an enzyme needed to combine </string>
    <string name="qz1_q8_a1">(1) oxygen molecules</string>
    <string name="qz1_q8_a2">(2) simple sugars</string>
    <string name="qz1_q8_a3">(3) amino acids</string>
    <string name="qz1_q8_a4">(4) biological catalysts</string>
        <string name="qz1_q9">9) A cell begins to produce a new type of protein. This is most likely due to an alteration of the </string>
    <string name="qz1_q9_a1">(1) structure of the cell membrane</string>
    <string name="qz1_q9_a2">(2)  sequence of bases in a section of a chromosome</string>
    <string name="qz1_q9_a3">(3) chemical makeup of the cytoplasm</string>
    <string name="qz1_q9_a4">(4)  shape of the antibodies produced by the nucleus</string>
        <string name="qz1_q10">10)  Information in segments of human DNA can be expressed by a bacterial cell as a result of </string>
    <string name="qz1_q10_a1">(1) sexual reproduction</string>
    <string name="qz1_q10_a2">(2) random mutation</string>
    <string name="qz1_q10_a3">(3) genetic variability</string>
    <string name="qz1_q10_a4">(4) genetic engineering</string>
        <string name="qz2_q1">1) In New York State, small farms that were abandoned many years ago have become hardwood forests. This is an example of </string>
    <string name="qz2_a1">(1) local deforestation</string>
    <string name="qz2_a2">(2) biotechnology</string>
    <string name="qz2_a3">(3) ecological succession</string>
    <string name="qz2_a4">(4) habitat loss</string>
        <string name="qz2_q2">2) In a multicellular organism, organs carry out a variety of life functions. In a single-celled organism, these functions are performed by </string>
    <string name="qz2_q2_a1">(1) tissues </string>
    <string name="qz2_q2_a2">(2) organelles </string>
    <string name="qz2_q2_a3">(3) organ systems</string>
    <string name="qz2_q2_a4">(4) organs</string>
        <string name="qz2_q3">3) Before starch can enter a cell, it must be </string>
    <string name="qz2_q3_a1">(1) absorbed by simple sugars</string>
    <string name="qz2_q3_a2">(2) diffused into simple sugars</string>
    <string name="qz2_q3_a3">(3) digested to form simple sugars</string>
    <string name="qz2_q3_a4">(4) actively transported by simple sugars</string>
        <string name="qz2_q4">4) In order for the human body to maintain homeostasis, the breakdown of glucose to release energy must be followed by the </string>
    <string name="qz2_q4_a1">(1) production of oxygen</string>
    <string name="qz2_q4_a2">(2) division of the cell</string>
    <string name="qz2_q4_a3">(3) removal of wastes</string>
    <string name="qz2_q4_a4">(4) production of receptor molecules</string>
        <string name="qz2_q5">5) The processes of deletion, insertion, and substitution can alter genes in a skin cell. The altered genes will most likely be passed on to </string>
    <string name="qz2_q5_a1">(1) sperm cells</string>
    <string name="qz2_q5_a2">(2) egg cells</string>
    <string name="qz2_q5_a3">(3) every cell that develops from that skin cell</string>
    <string name="qz2_q5_a4">(4) only a few of the cells that develop from that skin cell</string>
        <string name="qz2_q6">6)  In the past, humans developed varieties of dogs, such as the German shepherd and the bearded collie, using </string>
    <string name="qz2_q6_a1">(1) selective breeding for particular traits.</string>
    <string name="qz2_q6_a2">(2) recombination of genes during mitosis.</string>
    <string name="qz2_q6_a3">(3) mutations present only in body cells.</string>
    <string name="qz2_q6_a4">(4) natural selection of favorable traits.</string>
        <string name="qz2_q7">7) Which sequence best represents sexual reproduction? </string>
    <string name="qz2_q7_a1">(1) mitosis → gametes → zygote → fertilization</string>
    <string name="qz2_q7_a2">(2) gametes → meiosis → mitosis → fertilization</string>
    <string name="qz2_q7_a3">(3) fertilization → gametes → meiosis → zygote</string>
    <string name="qz2_q7_a4">(4) meiosis → gametes → fertilization → zygote</string>
        <string name="qz2_q8">8) The energy used to obtain, transfer, and transport materials within an organism comes directly from </string>
    <string name="qz2_q8_a1">(1) ATP </string>
    <string name="qz2_q8_a2">(2) DNA </string>
    <string name="qz2_q8_a3">(3) sunlight </string>
    <string name="qz2_q8_a4">(4) starch </string>
        <string name="qz2_q9">9) In an organism, a muscle cell has the same DNA as a nerve cell, yet the cells perform different functions. This is possible because </string>
    <string name="qz2_q9_a1">(1) different mutations occur in each cell type, changing the genetic instructions</string>
    <string name="qz2_q9_a2">(2) temperature variations within the body alter DNA</string>
    <string name="qz2_q9_a3">(3) proteins in each cell type change the structure of DNA</string>
    <string name="qz2_q9_a4">(4) different parts of the genetic instructions are used in each type of cell</string>
        <string name="qz2_q10">10)  Which type of organism helps to reduce atmospheric carbon dioxide? </string>
    <string name="qz2_q10_a1">(1) carnivores </string>
    <string name="qz2_q10_a2">(2) producers </string>
    <string name="qz2_q10_a3">(3) decomposers </string>
    <string name="qz2_q10_a4">(4) herbivores</string>
        <string name="qz3_q1">1) How do cells in the ovary detect a hormone from the brain? </string>
    <string name="qz3_a1">(1) The brain sends a nerve impulse to the ovary.</string>
    <string name="qz3_a2">(2) White blood cells bring the hormone to the ovary.</string>
    <string name="qz3_a3">(3) Receptor molecules on the cells of the ovary bind with the hormone.</string>
    <string name="qz3_a4">(4) Vacuoles within the ovary bind with the hormone.</string>
        <string name="qz3_q2">2) Autotrophs might survive when heterotrophs cannot, because autotrophs are able to </string>
    <string name="qz3_q2_a1">(1) reproduce asexually </string>
    <string name="qz3_q2_a2">(2) become dormant </string>
    <string name="qz3_q2_a3">(3) exist without respiration</string>
    <string name="qz3_q2_a4">(4) make their own food</string>
        <string name="qz3_q3">3) During the process of cellular respiration, energy is released from </string>
    <string name="qz3_q3_a1">(1) carbon dioxide</string>
    <string name="qz3_q3_a2">(2) oxygen atoms</string>
    <string name="qz3_q3_a3">(3) water molecules</string>
    <string name="qz3_q3_a4">(4) chemical bonds</string>
        <string name="qz3_q4">4) In order to enter cells and be useful to the body, starch must be </string>
    <string name="qz3_q4_a1">(1) absorbed through the skin</string>
    <string name="qz3_q4_a2">(2) broken down into fats and water</string>
    <string name="qz3_q4_a3">(3) digested into simple sugars</string>
    <string name="qz3_q4_a4">(4) converted to carbon dioxide and ATP</string>
        <string name="qz3_q5">5) Which expression correctly represents a reproductive process that usually occurs in humans where 2n is equal to the number of chromosomes in each body cell? </string>
    <string name="qz3_q5_a1">(1) n + n → n</string>
    <string name="qz3_q5_a2">(2) n + n → 2n</string>
    <string name="qz3_q5_a3">(3) n + 2n → 2n</string>
    <string name="qz3_q5_a4">(4) 2n + 2n → 4n</string>
        <string name="qz3_q6">6)  Which event would most likely cause a change in a genetic sequence in an organism? </string>
    <string name="qz3_q6_a1">(1) eating certain foods high in saturated fats</string>
    <string name="qz3_q6_a2">(2) strenuous physical activity</string>
    <string name="qz3_q6_a3">(3) exposure to radiation</string>
    <string name="qz3_q6_a4">(4) a sudden exposure to cooler temperatures</string>
        <string name="qz3_q7">7) Many scientists are worried about some of Earth’s finite resources because humans are </string>
</resources>