<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="simple.lerp.RandomQuestion"
    android:background="@drawable/background_plain_2">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/scrollView3"
        android:layout_marginTop="140dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qz1_q1"
                android:id="@+id/randomquestion_question"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="0dp"
                android:textSize="17dp"
                android:layout_marginRight="0dp"
                android:textColor="#ffffffff"
                android:autoText="false" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="280dp"
        android:id="@+id/scrollView2"
        android:layout_marginTop="318dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qz1_a1"
                android:id="@+id/randomquestion_a1"
                android:layout_marginTop="0dp"
                android:textColor="#ffffffff"
                android:textSize="16dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qz1_a2"
                android:id="@+id/randomquestion_a2"
                android:layout_marginTop="40dp"
                android:textColor="#ffffffff"
                android:textSize="16dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qz1_a3"
                android:id="@+id/randomquestion_a3"
                android:layout_marginTop="40dp"
                android:textColor="#ffffffff"
                android:textSize="16dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/qz1_a4"
                android:id="@+id/randomquestion_a4"
                android:textColor="#ffffffff"
                android:textSize="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Submit"
        android:id="@+id/randomquestion_submit"
        android:onClick="RandomQuestionSubmit"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="228dp" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/randomquestion_responce"
        android:hint="Response"
        android:background="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/question"
        android:layout_alignStart="@+id/question"
        android:layout_marginTop="228dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Correct/Nay"
        android:id="@+id/randomquestion_yeyney"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:text="Tap to start"
        android:id="@+id/randomquestion_begin_button"
        android:onClick="RandomQuestionBegin"
        android:src="@drawable/randomquestion_start_icon"
        android:layout_below="@+id/randomquestion_yeyney"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next?"
        android:id="@+id/randomquestion_next_button"
        android:onClick="RandomQuestionNext"
        android:layout_alignTop="@+id/randomquestion_begin_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
